# Youtube-Finance-AI

./: .gitignore  Dockerfile  README.md  RHINO_FINANCE_GUIDE.md  docker-compose.yml  docker-run.sh  pyproject.toml  run_app.py  test_docker.py
config/: README.md
core/: __init__.py  gemini_llm.py  info_extractor.py
prompts/: financial_extraction_prompt.txt
scripts/: batch_channel.py  reprocess_transcripts.py  single_video.py
src/: app.py  asr_service.py  gemini_llm.py  info_extractor.py  youtube_downloader.py
templates/: dashboard.html
test/: test_media_download.py
tools/: __init__.py  rhino_finance.py  run.py
web/: __init__.py  analyzer.py  run.py  web_dashboard.py
